--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,21 @@
 	/* general variables*/
 	--color-accent: #3E86F5;
 	--color-lightaccent: rgba(62, 134, 245, 0.2);
-	--color-main: #fff;
+	--color-primary: #fff;
 	--color-bg: #f7f7f7;
+	--color-book: #F2F6FF;
+	--color-btn: rgba(62, 134, 245, 0.8);
 
 
 	/* text variables*/
 	--color-headertext: #fff;
 	--color-title: #000;
 	--color-text: rgba(0, 0, 0, 0.5);
+	--color-textinfo: #f178b6;
+	--color-bginfo: #fcddec;
 
 }
+
 *,
 *::before,
 *::after {
@@ -29,7 +34,7 @@ html {
 
 body {
 	font-family: 'Poppins', sans-serif;
-	font-size: 2rem;
+	font-size: 1.8rem;
 	font-weight: 400;
 	color: var(--color-text);
 	line-height: 1.5;
@@ -44,6 +49,53 @@ img {
 	max-width: 100%;
 }
 
+h2 {
+	font-weight: 600;
+	font-size: 4.8rem;
+	color: var(--color-title);
+}
+
+h3 {
+	font-weight: 600;
+	font-size: 2.4rem;
+	color: var(--color-title);
+}
+
+.tabs {
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--color-primary);
+	max-width: 35rem;
+	margin: 0 auto;
+	font-weight: 500;
+	font-size: 1.8rem;
+	color: var(--color-text);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
+	border-radius: 1rem;
+	padding: 1rem;
+	margin-bottom: 4rem;
+}
+
+.tabs__item {
+	padding: 1rem 2.4rem;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.tabs__item:not(:last-child) {
+	margin-right: 0.5rem;
+}
+
+.tabs__item:hover {
+	background-color: var(--color-lightaccent);
+}
+
+.tabs__item--active {
+	background-color: var(--color-accent);
+	color: var(--color-primary);
+	cursor: default;
+}
+
 /* layout */
 .wrapper {
 	overflow: hidden;
@@ -53,7 +105,7 @@ img {
 	background-color: var(--color-bg);
 }
 
-.main {
+.primary {
 	flex: 1 1 auto;
 }
 
@@ -75,7 +127,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	position: relative;
 	background: url('../images/bg-header.jpg') no-repeat center / cover;
 	/* filter: brightness(50%); */
-	color: var(--color-main);
+	color: var(--color-primary);
 }
 
 .header::before {
@@ -109,7 +161,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 
 .menu__item {
 	font-weight: 500;
-	color: var(--color-main);
+	color: var(--color-primary);
 	font-size: 2.4rem;
 	margin-right: 5rem;
 }
@@ -121,7 +173,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 .menu__item--active a {
 	text-align: center;
 	padding: 1.5rem 4.4rem;
-	background-color: var(--color-main);
+	background-color: var(--color-primary);
 	color: var(--color-accent);
 	border-radius: 1rem;
 	font-weight: 500;
@@ -150,7 +202,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	line-height: 2;
 }
 
-/* main */
+/* primary */
 
 /* section: search */
 .search {
@@ -162,7 +214,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	display: inline-flex;
 	padding: 1rem 1rem 2.4rem 1rem;
 	border-radius: 25px 25px 0px 0px;
-	background-color: var(--color-main);
+	background-color: var(--color-primary);
 }
 
 .search__tab {
@@ -197,18 +249,17 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 }
 
 /* search__details */
-
 .search__details {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	background-color: var(--color-main);
+	background-color: var(--color-primary);
 	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 	border-radius: 0px 50px 50px 50px;
 	padding: 6rem 4.8rem;
 }
 
-.details__items {	
+.details__items {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -220,7 +271,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 }
 
 .detail__item {
-	 flex: 0 0 100%;
+	flex: 0 0 100%;
 	max-width: 12.5rem;
 	align-items: center;
 }
@@ -259,7 +310,6 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 .detail__item input:focus::placeholder {
 	opacity: 0;
 }
-
 
 .detail__icon {
 	flex: 0 0 4rem;
@@ -317,7 +367,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	position: relative;
 	min-width: 15.4rem;
 	height: 15.4rem;
-	background: rgba(62, 134, 245, 0.8);
+	background: var(--color-btn);
 	border-radius: 65px;
 	border: none;
 	cursor: pointer;
@@ -333,4 +383,203 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	top: 50%;
 	right: 50%;
 	transform: translate(50%, -50%);
+}
+
+/* special-offer */
+.special {
+	padding: 16rem 0;
+}
+
+.special__title {
+	text-align: center;
+	margin-bottom: 6rem;
+}
+
+/* special__cards */
+.cards {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: -1rem;
+}
+
+.cards .card {
+	margin: 1rem;
+}
+
+.card {
+	max-width: 38rem;
+	background: var(--color-primary);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
+	border-radius: 50px;
+	padding: 2.1rem 2.7rem 2.5rem;
+	overflow: hidden;
+}
+
+.card__show {
+	display: flex;
+	margin-bottom: 1.8rem;
+}
+
+.card__img {
+	border-radius: 50px;
+}
+
+.card__date {
+	width: 2.7rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 500;
+	font-size: 1.8rem;
+	letter-spacing: 0.5em;
+	white-space: nowrap;
+	margin-left: 2rem;
+}
+
+.card__date>span {
+	transform: rotate(90deg);
+}
+
+.card__info {
+	padding-left: 1.9rem;
+}
+
+.card__details {
+	margin-bottom: 1rem;
+	font-weight: 500;
+	font-size: 1.4rem;
+}
+
+.card__type {
+	display: inline-block;
+	background-color: var(--color-bginfo);
+	border-radius: 100px;
+	color: var(--color-textinfo);
+	padding: 0 1.6rem;
+	margin-right: 1.2rem;
+}
+
+.card__duration {
+	display: inline-block;
+	padding: 0;
+}
+
+.card__book {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 1rem;
+}
+
+.card__price span {
+	font-weight: 500;
+	font-size: 2.4rem;
+	color: var(--color-title);
+}
+
+.card__btn {
+	background: var(--color-book);
+	border: none;
+	border-radius: 10px;
+	font-weight: 500;
+	font-size: 1.4rem;
+	padding: 1.5rem 2.2rem;
+	text-align: center;
+	color: var(--color-accent);
+	cursor: pointer;
+	transition: all 0.4s ease-out;
+}
+
+.card__btn:hover {
+	background: var(--color-lightaccent);
+}
+
+.about {
+	display: flex;
+	align-items: center;
+	padding: 8rem 0;
+}
+
+.about__statistics {
+	position: relative;
+	flex: 0 0 48rem;
+	height: 80rem;
+	margin-right: 12rem;
+}
+
+.about__statistics img {
+	border-radius: 75px;
+}
+
+.about__badge {
+	position: absolute;
+	top: 50%;
+	right: calc(100% - 17.4rem / 2.3);
+	display: flex;
+	flex-direction: column;
+	width: 17.4rem;
+	height: 12rem;
+	justify-content: center;
+	text-align: center;
+	font-weight: 300;
+	color: var(--color-title);
+	text-transform: uppercase;
+	background: var(--color-primary);
+	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.07);
+	border-radius: 35px;
+
+}
+
+.about__badge span {
+	color: var(--color-accent);
+	font-weight: 600;
+	font-size: 3.6rem;
+	line-height: 0.7;
+}
+
+.about__badge--top {
+top: 5%;
+left: calc(100% - 17.4rem / 2.2);
+}
+
+.about__badge--bottom {
+top: 68%;
+left: calc(100% - 17.4rem / 2.2);
+}
+
+.about__content {
+	font-size: 2rem;
+	line-height: 2;
+}
+
+.about__title {
+	max-width: 54rem;
+	margin-bottom: 2rem;
+	line-height: 1.5;
+}
+
+.about__text {
+	margin-bottom: 2.7rem;
+}
+
+.about__text p:first-child {
+	margin-bottom: 4rem;
+}
+
+.about__btn {
+	max-width: 17.9rem;
+	background: var(--color-btn);
+	border-radius: 10px;
+	border: none;
+	color: var(--color-primary);
+	font-weight: 400;
+	font-size: 2rem;
+	padding: 2.3rem 3.4rem;
+	box-shadow: 4px 8px 25px rgba(62, 134, 245, 0.25);
+	cursor: pointer;
+	transition: all 0.4s ease-out;
+}
+
+.about__btn:hover {
+	background: var(--color-accent);
 }
