--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
 
 
 	/* text variables*/
-	--color-headertext: #fff;
 	--color-title: #000;
 	--color-text: rgba(0, 0, 0, 0.5);
 	--color-textrelax: #f178b6;
@@ -64,23 +63,27 @@ h3 {
 	color: var(--color-title);
 }
 
+/* components */
+
+/* tabs */
 .tabs {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+}
+
+.tabs__items {
+	display: flex;
 	background-color: var(--color-primary);
-	max-width: 35rem;
-	margin: 0 auto;
-	font-weight: 500;
-	font-size: 1.8rem;
-	color: var(--color-text);
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
 	border-radius: 1rem;
 	padding: 1rem;
-	margin-bottom: 4rem;
 }
 
 .tabs__item {
-	padding: 1rem 2.4rem;
+	font-weight: 500;
+	font-size: 1.8rem;
+	color: var(--color-text);
+	padding: 1rem 2.2rem;
 	border-radius: 10px;
 	cursor: pointer;
 }
@@ -98,6 +101,120 @@ h3 {
 	color: var(--color-primary);
 	cursor: default;
 }
+
+/* cards */
+.card {
+	background: var(--color-primary);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
+	border-radius: 50px;
+	padding: 2.1rem 2.7rem 2.5rem;
+}
+
+.card__show {
+	display: flex;
+	margin-bottom: 2rem;
+}
+
+.card__show img {
+	border-radius: 50px;
+}
+
+.card__date {
+	width: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--color-text);
+	font-weight: 500;
+	font-size: 1.8rem;
+	letter-spacing: 0.5em;
+	white-space: nowrap;
+	margin-left: 2.5rem;
+}
+
+.card__date>span {
+	transform: rotate(90deg);
+}
+
+.card__info {
+	padding-left: 1.9rem;
+}
+
+.card__details {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	font-weight: 500;
+	font-size: 1.4rem;
+}
+
+.card__type {
+	background-color: var(--color-bgrelax);
+	border-radius: 100px;
+	color: var(--color-textrelax);
+	padding: 0 1.6rem;
+	margin-right: 1.2rem;
+}
+
+.card__type--advent {
+	background: var(--color-bgadvent);
+	color: var(--color-textadvent);
+}
+
+.card__duration {
+	display: inline-block;
+	padding: 0;
+}
+
+.card__book {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 1rem;
+}
+
+.card__price span {
+	font-weight: 500;
+	font-size: 2.4rem;
+	color: var(--color-title);
+}
+
+.card__btn {
+	min-width: 10.7rem;
+	background: var(--color-book);
+	border: none;
+	border-radius: 10px;
+	font-weight: 500;
+	font-size: 1.4rem;
+	padding: 1.5rem 1.9rem;
+	text-align: center;
+	color: var(--color-accent);
+	cursor: pointer;
+	transition: all 0.4s ease-out;
+}
+
+.card__btn:hover {
+	background: var(--color-lightaccent);
+}
+
+/* rating */
+.rating {
+	position: absolute;
+	display: flex;
+	width: 5.5rem;
+	padding: 0.2rem 1rem 0.1rem;
+	font-weight: 500;
+	font-size: 1.2rem;
+	color: var(--color-title);
+	background: var(--color-primary);
+	border-radius: 25px;
+}
+
+.rating img {
+	width: 1.5rem;
+	height: 1.5rem;
+	margin-right: 0.2rem;
+}
+
 
 /* layout */
 .wrapper {
@@ -205,7 +322,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	line-height: 2;
 }
 
-/* primary */
+/* main */
 
 /* section: search */
 .search {
@@ -390,7 +507,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 
 /* special-offer */
 .special {
-	padding: 16rem 0;
+	padding: 16rem 0 14rem;
 }
 
 .special__title {
@@ -398,114 +515,30 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	margin-bottom: 6rem;
 }
 
-/* special__cards */
-.cards {
+.special .tabs {
+	margin-bottom: 4rem;
+}
+
+.special__cards {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	margin: -1rem;
 }
 
-.cards .card {
+.special__cards .card {
 	margin: 1rem;
 }
 
-.card {
-	max-width: 38rem;
-	background: var(--color-primary);
-	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
-	border-radius: 50px;
-	padding: 2.1rem 2.7rem 2.5rem;
-	overflow: hidden;
-}
 
-.card__show {
-	display: flex;
-}
-
-.card__img {
-	border-radius: 50px;
-	margin-bottom: 1.8rem;
-}
-
-.card__date {
-	width: 2.7rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-weight: 500;
-	font-size: 1.8rem;
-	letter-spacing: 0.5em;
-	white-space: nowrap;
-	margin-left: 2rem;
-}
-
-.card__date>span {
-	transform: rotate(90deg);
-}
-
-.card__info {
-	padding-left: 1.9rem;
-}
-
-.card__details {
-	margin-bottom: 1rem;
-	font-weight: 500;
-	font-size: 1.4rem;
-}
-
-.card__type {
-	display: inline-block;
-	background-color: var(--color-bgrelax);
-	border-radius: 100px;
-	color: var(--color-textrelax);
-	padding: 0 1.6rem;
-	margin-right: 1.2rem;
-}
-
-.card__type--advent {
-	background: var(--color-bgadvent);
-	color: var(--color-textadvent);
-}
-
-.card__duration {
-	display: inline-block;
-	padding: 0;
-}
-
-.card__book {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 1rem;
-}
-
-.card__price span {
-	font-weight: 500;
-	font-size: 2.4rem;
-	color: var(--color-title);
-}
-
-.card__btn {
-	background: var(--color-book);
-	border: none;
-	border-radius: 10px;
-	font-weight: 500;
-	font-size: 1.4rem;
-	padding: 1.5rem 2.2rem;
-	text-align: center;
-	color: var(--color-accent);
-	cursor: pointer;
-	transition: all 0.4s ease-out;
-}
-
-.card__btn:hover {
-	background: var(--color-lightaccent);
-}
-
+/* section-about */
 .about {
+	padding: 8rem 0;
+}
+
+.about__content {
 	display: flex;
 	align-items: center;
-	padding: 8rem 0;
 }
 
 .about__statistics {
@@ -535,7 +568,6 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	background: var(--color-primary);
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.07);
 	border-radius: 35px;
-
 }
 
 .about__badge span {
@@ -555,7 +587,7 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	left: calc(100% - 17.4rem / 2.2);
 }
 
-.about__content {
+.about__descr {
 	font-size: 2rem;
 	line-height: 2;
 }
@@ -593,20 +625,28 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 }
 
 /* section-destination */
-
 .destination {
 	padding: 12rem 0;
-	text-align: center;
 }
 
 .destination__title {
-	margin-bottom: 3rem;
+	margin-bottom: 4rem;
+	text-align: center;
 }
 
-.tabs--opacity {
+.tabs--opacity .tabs__items {
 	background: transparent;
 	box-shadow: none;
 	border: none;
+}
+
+.tabs--opacity {
+	margin-bottom: 8rem;
+}
+
+.tabs--opacity .tabs__item {
+	border: 2px solid transparent;
+	transition: all 0.4s ease-out;
 }
 
 .tabs--opacity .tabs__item--active {
@@ -614,76 +654,57 @@ margin: calc(20px + (50 - 20) * ((100vw - 320 px) / (1200 - 320))); */
 	color: var(--color-accent);
 }
 
-.tabs--opacity .tabs__item {
-	font-weight: 600;
+.tabs--opacity .tabs__item:hover {
+	color: var(--color-accent);
+	background: transparent;
+	border: 2px solid var(--color-lightaccent);
 }
 
 .destination__cards {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin-top: 8rem;
+	margin: -1rem;
 }
 
 .card--destination {
-	padding: 1rem 1rem 0;
+	padding: 1rem;
 	border-radius: 25px;
-	box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
 	margin: 1rem;
-}
-
-.card--destination img {
-	margin-bottom: 2rem;
-}
-
-.card__content {
-	text-align: left;
-	padding-left: 2rem;
-}
-
-.card__content .card__title {
-	margin-bottom: 0.5rem;
-}
-
-.card__location {
-	display: flex;
-	font-weight: 500;
-	font-size: 1.4rem;
 }
 
 .card--destination .card__show {
 	position: relative;
 }
 
-.card__img {
+.card__show--destination img {
 	border-radius: 25px;
 }
 
-.card__badge {
-	position: absolute;
+.card__show--destination .rating {
 	top: 1.4rem;
 	right: 1.5rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 5.5rem;
-	height: 2rem;
+}
+
+.card__content {
+	padding-left: 2rem;
 	font-weight: 500;
-	font-size: 1.2rem;
-	color: var(--color-title);
-	background: var(--color-primary);
-	border-radius: 25px;
-	position: absolute;
+	font-size: 1.4rem;
 }
 
-.card__badge img {
-	margin-bottom: 0;
-	margin-right: 0.2rem;
+.card__content .card__title {
+	font-weight: 600;
+	font-size: 1.8rem;
+
 }
 
-.card__badge p {
-	display: inline-block;
+.card__location {
+	display: flex;
+	margin-top: 0.5rem;
+	align-items: center;
 }
 
-.destination__cards > .card--destination {
+.card__location img {
+	flex: 0 0 1.7rem;
 }
+
